# connected-node

ground/G001/: CMakeLists.txt  boot.S  esp32.ld  main.cpp
points/P001/heart_beat/: CMakeLists.txt
points/P001/heart_beat/main/: main.cpp
points/P001/heart_beat/main/include/: app_main.hpp  esp_idf_c.h
points/P002/led_blink/: CMakeLists.txt  sdkconfig
points/P002/led_blink/main/: main.cpp
points/P002/led_blink/main/include/: app_main.hpp  esp_idf_c.h
points/P003/adc/: .clangd  CMakeLists.txt
points/P003/adc/main/: CMakeLists.txt  main.cpp
points/P004/uart/: CMakeLists.txt  sdkconfig
points/P004/uart/main/: main.cpp
points/P004/uart/main/include/: app_main.hpp
points/P005/dual_core/: CMakeLists.txt  sdkconfig
points/P005/dual_core/main/: main.cpp
points/P005/dual_core/main/include/: app_main.hpp  custome_task.hpp
points/P006/pass_data/: .gitignore  CMakeLists.txt
points/P006/pass_data/main/: main.cpp
points/P006/pass_data/main/include/: app_main.hpp  custome_task.hpp
